# gmeow-gts

./: .editorconfig  .gitattributes  .gitignore  .gitleaksignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSING.md  Package.swift  README.md  REUSE.toml  SECURITY.md  conanfile.py  justfile
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmarks.yml  ci.yml  codeql.yml  fuzz.yml  julia-tagbot.yml  release-capi.yaml  release-cargo-capi.yaml  release-cargo.yaml  release-go.yaml  release-luarocks.yaml  release-npm.yaml  release-pypi.yml  release-rubygems.yaml  release-visual-hashing.yaml  security.yml  verify-release.yml
cpp/: README.md
cpp/examples/: smoke.cpp
cpp/scripts/: smoke.sh
docs/: GTS-ADVANCED-PRIMITIVES.md  GTS-API-CLI-PARITY.md  GTS-BENCHMARK-RELEASE-REPORT.md  GTS-CONFORMANCE.md  GTS-DUMP-DIR.md  GTS-ECOSYSTEM-INTEGRATIONS.md  GTS-GOVERNANCE.md  GTS-OKF.md  GTS-PAPER-DRAFT.md  GTS-QUALITY-BUDGET.md  GTS-RELEASE-SLSA.md  GTS-SECURITY-POLICY.md  GTS-SPEC.md  GTS-THIRD-PARTY-IMPLEMENTER-GUIDE.md  GTS-UNCHECKED-PANIC-TRIAGE.md  GTS-V1-RC1-CHECKLIST.md  GTS-WRAPPER-SMOKE-MATRIX.md  api-parity.json  documentation-roster.json  gts-reference.md  positioning.md
docs/i18n/: GLOSSARY.md  README.md
dotnet/: README.md
dotnet/Gmeow.Gts/: Gmeow.Gts.csproj  Gts.cs  NativeMethods.cs
dotnet/Gmeow.Gts.Smoke/: Gmeow.Gts.Smoke.csproj  Program.cs
dotnet/scripts/: smoke.sh
go/: .golangci.yml  .goreleaser.yaml  README.md  go.mod  go.sum
go/codec/: codec.go  codec_test.go
go/compact/: compact.go  compact_test.go
go/cose/: cose.go  cose_test.go  (+3 more)
ietf/: README.md  cbor-review-email.md  draft-audley-gts-graph-transport-substrate-00.xml  draft-audley-gts-graph-transport-substrate.md
julia/: Dockerfile  Project.toml  README.md  REGISTRATION.md
kotlin/: README.md  build.gradle.kts  settings.gradle.kts
lua/: Dockerfile  LUAROCKS.md  README.md  gmeow-gts-0.9.4-1.rockspec  gmeow-gts-dev-1.rockspec
packaging/: README.md
packaging/native-consumer/: CMakeLists.txt  smoke.cpp
php/: Dockerfile  PACKAGIST.md  README.md  composer.json
python/: README.md  pyproject.toml
python/examples/: README.md
python/scripts/: gen_cose_vectors.py  gen_emojihash_vectors.py  gen_encrypt0_vectors.py  gen_openpgp_vectors.py  gen_randomart_vectors.py  gen_signed_vectors.py  gen_vectors.py
python/src/gts/: __init__.py  cli.py  cli_common.py  cli_export.py  cli_files.py  cli_verify.py  codec.py  compact.py  crypto.py  db.py  emojihash.py  files.py  from_nquads.py  mmr.py  model.py  nested.py  nquads.py  openpgp.py  policy.py  rdf.py  reader.py  replication.py  stream.py  trig.py  vectors.py  verify.py  wire.py  writer.py
python/src/gts/examples/: __init__.py  agent_memory.py
python/tests/: test_agent_memory.py  test_codec.py  test_cose_vectors.py  test_db.py  test_emojihash.py  test_emojihash_vectors.py  test_encrypt0_vectors.py  test_from_nquads.py  test_gts.py  test_gts_cli.py  test_gts_crypto.py  test_lazy_blobs.py  test_mmr.py  test_nested.py  test_openpgp.py  test_openpgp_vectors.py  test_policy.py  test_properties.py  test_randomart_vectors.py  test_rdflib_interop.py  test_trig.py  test_verify.py
quality/: quality-budget-baseline.json
r/: .Rbuildignore  CRAN-READINESS.md  DESCRIPTION  Dockerfile  LICENSE  NAMESPACE  README.md  configure  configure.win
ruby/: Dockerfile  Gemfile  README.md  gmeow-gts.gemspec
rust/: Cargo.toml  README.md
rust/capi/: Cargo.toml  README.md  gts.pc.in
rust/capi/cmake/: GtsConfig.cmake
rust/capi/examples/: smoke.c
rust/capi/include/: gts.h
rust/capi/scripts/: package.sh  smoke.sh  verify-archive-windows.ps1  verify-archive.sh
rust/capi/src/: lib.rs
rust/examples/: agent_memory.rs  streaming_sink_bench.rs
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: read.rs
rust/rdf-events/: Cargo.toml
rust/rdf-events/src/: lib.rs
rust/src/: codec.rs  compact.rs  cose.rs  db.rs  dumpdir.rs  emojihash.rs  files.rs  from_nquads.rs  from_okf.rs  from_tar.rs  from_trig.rs  from_yamlld.rs  lib.rs  mmr.rs  model.rs  native_store.rs  nested.rs  nquads.rs  okf.rs  openpgp.rs  oxigraph.rs  policy.rs  rdf.rs  rdf_codecs.rs  rdf_events.rs  rdf_xml.rs  reader.rs  reader_layout.rs  reader_union.rs  replication.rs  sophia.rs  tar.rs  trig.rs  ulid.rs  verify.rs  wire.rs  writer.rs  xsd.rs  yamlld.rs
rust/src/examples/: agent_memory.rs
rust/tests/: agent_memory.rs  cli.rs  conformance.rs  cose.rs  db.rs  deterministic_writer.rs  emojihash.rs  encrypt0.rs  files_v2.rs  from_nquads.rs  from_trig.rs  graph_iter.rs  lazy_blobs.rs  mmr.rs  native_store.rs  nested.rs  okf.rs  okf_corpus.rs  oxigraph_adapter.rs  policy.rs  rdf.rs  rdf_codecs.rs  rdf_events.rs  rdf_feature_gate.rs  reader.rs  signed.rs  sophia_adapter.rs  streaming.rs  tar.rs  tar_corpus.rs  ulid.rs  verify.rs  writer_transforms.rs  yamlld.rs
scripts/: bench_reader_memory.py  bench_release_suite.py  check-versions.sh  check_advanced_contract.py  check_api_parity.py  check_cli_parity.py  check_crypto_deferrals.py  check_doc_roster.py  check_ecosystem_contract.py  check_i18n_docs.py  check_quality_budget.py  check_rust_wasm_dependency_audit.py  check_security_contract.py  check_vector_manifest.py  interop.sh  package_dry_run_native_managers.sh  package_dry_run_wrappers.sh  package_php_packagist_root.sh  verify_release.py  wrapper_smoke_matrix.sh
smalltalk/: .smalltalk.ston  Dockerfile  README.md
swift/: Package.swift  README.md  SWIFT_PACKAGE_INDEX.md
ts/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.test.json
vectors/: 12-conflicting-reifier.expected.json  12-conflicting-reifier.gts  29-deterministic-writer.expected.json  29-deterministic-writer.gts  manifest.core.json  manifest.json
visual-hashing/: Cargo.toml  README.md
visual-hashing/src/: emojihash.rs  lib.rs  randomart.rs
visual-hashing/tests/: conformance.rs
(+282 files in other folders)
