# SPDX-FileCopyrightText: 2026 Blackcat Informatics® Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0

[project]
name = "gmeow-gts"
version = "0.9.0"
description = "GTS (Graph Transport Substrate): a single-file CBOR transport for RDF 1.2 graphs — append-only log, BLAKE3 chain verification, deterministic fold, multi-segment cat-append composition."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT OR Apache-2.0"
authors = [{ name = "Blackcat Informatics® Inc." }]
keywords = ["rdf", "rdf-1.2", "cbor", "knowledge-graph", "linked-data", "gts", "gmeow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "cbor2>=6.1.2",
    "blake3>=1.0.8",
    "zstandard>=0.25.0",
    "cryptography>=44",
]

[project.optional-dependencies]
rdf = ["rdflib>=7.6"]
db = ["duckdb>=1.0"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
    "duckdb>=1.0",
]

[project.urls]
Homepage = "https://blackcatinformatics.ca/projects/gts"
Repository = "https://github.com/Blackcat-Informatics/gmeow-gts"
Specification = "https://github.com/Blackcat-Informatics/gmeow-gts/blob/main/docs/GTS-SPEC.md"

[project.scripts]
gts = "gts.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
# Type-check runtime code; tests deliberately exercise type-violating inputs.
files = ["src", "scripts"]
