# SPDX-FileCopyrightText: 2026 Blackcat Informatics® Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "gmeow-gts"
description = "GTS (Graph Transport Substrate) format engine: CBOR-sequence append-only RDF 1.2 log reader, folder, and verifier"
version = "0.9.10"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://blackcatinformatics.ca/projects/gts"
repository = "https://github.com/Blackcat-Informatics/gmeow-gts"
readme = "README.md"
keywords = ["rdf", "rdf-12", "cbor", "knowledge-graph", "linked-data"]

[features]
default = []
# Enables DuckDB/Parquet relational exports. This feature intentionally adds no
# Cargo dependencies; it shells out to a `duckdb` binary on PATH at runtime.
duckdb = []
# Enables native RDF dataset interop. This is intentionally opt-in so default
# transport users do not inherit RDF dataset helpers unless they ask for them.
rdf = ["xsd"]
# Enables syntax-side XML Schema datatype lexical validation/canonicalization.
# This is kept opt-in so default transport users do not inherit RDF/XSD helper
# dependencies unless they ask for parser-facing datatype semantics.
xsd = ["dep:oxsdatatypes"]
# Enables RDF 1.2 text codecs. N-Triples/Turtle/TriG use native code; RDF/XML
# uses a native RDF/XML mapper over a small XML tokenizer.
rdf-codecs = ["rdf", "dep:quick-xml"]
# Enables an optional native in-memory RDF store. This reuses the crate's native
# RDF dataset model and adds no third-party graph-store dependency.
native-store = ["rdf"]
# Enables JSON trust-policy file loading for release/profile tooling.
# This is opt-in so default readers do not inherit serialization deps.
policy-config = ["dep:serde", "dep:serde_json"]
# Adds YAML policy files on top of JSON policy loading. Split out so JSON-only
# release tooling does not inherit a YAML parser.
policy-config-yaml = ["policy-config", "dep:serde_yaml"]
# Enables the Rust-only YAML-LD-star/JSON-LD-star transform profile. This stays
# opt-in so default transport and wasm builds do not inherit serialization deps.
yaml-ld = ["dep:serde", "dep:serde_json", "dep:serde_yaml"]
# Enables Rust OKF (Open Knowledge Format) bundle import/export. This is opt-in
# so default transport and wasm builds do not inherit serialization deps.
okf = ["dep:serde", "dep:serde_json", "dep:serde_yaml"]
# Enables Rust tar stream import/export. Kept feature-local so the default
# transport engine does not inherit archive-format policy.
tar = ["dep:tar"]

# The package is named gmeow-gts on crates.io, but the CLI binary keeps the
# shorter `gts` name for ergonomics.
[[bin]]
name = "gts"
path = "src/bin/gts.rs"

[dependencies]
# emojihash + randomart visual fingerprints, published from
# Blackcat-Informatics/visual-hashing.
visual-hashing = "0.1.3"
blake3 = "1"
ciborium = "0.2"
flate2 = "1"
# pure-Rust zstd encoder/decoder — no C toolchain, wasm-friendly
structured-zstd = "0.0.40"
time = { version = "0.3", features = ["formatting", "parsing"] }
filetime = "0.2"
# pure-Rust Ed25519 (COSE_Sign1, §9.2) — deterministic per RFC 8032, wasm-friendly
ed25519-dalek = "2"
# pure-Rust SHA-1 — only for OpenPGP v4 key fingerprints (RFC 4880 §12.2), not
# used as a general-purpose hash; wasm-friendly
sha1 = "0.11"
# pure-Rust AES-256-GCM (COSE_Encrypt0, §9.3). getrandom is OFF so the wasm32
# build stays clean; the random-IV nonce comes from `getrandom` below, which is
# only pulled in on non-wasm targets (the deterministic seal/open paths need no RNG).
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
oxsdatatypes = { version = "0.2.2", optional = true }
serde = { version = "1", default-features = false, features = ["derive", "std"], optional = true }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.9", optional = true }
tar = { version = "0.4", optional = true }
quick-xml = { version = "0.40.1", optional = true }

# The random-IV `encrypt0` convenience needs an OS CSPRNG; restrict it to
# non-wasm targets so `wasm32-unknown-unknown` never tries to link getrandom.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
serde_json = "1"
