# SPDX-FileCopyrightText: 2026 Blackcat Informatics® Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "gmeow-gts-capi"
description = "Stable C ABI wrapper for the Rust GTS core"
version = "0.9.6"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://blackcatinformatics.ca/projects/gts"
repository = "https://github.com/Blackcat-Informatics/gmeow-gts"
readme = "README.md"
keywords = ["rdf", "rdf-12", "cbor", "ffi", "linked-data"]
categories = ["api-bindings", "encoding"]
include = [
  "/Cargo.lock",
  "/Cargo.toml",
  "/LICENSE-APACHE",
  "/LICENSE-MIT",
  "/README.md",
  "/cmake/**",
  "/examples/**",
  "/gts.pc.in",
  "/include/**",
  "/src/**",
]

[lib]
name = "gts"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
gmeow-gts = { version = "0.9.6", path = "..", features = ["rdf-codecs", "yaml-ld"] }
serde_json = "1"
