# SPDX-FileCopyrightText: 2026 Blackcat Informatics(R) Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "gmeow-rdf-events"
description = "Zero-dependency RDF event protocol shared by GMEOW graph tooling"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://blackcatinformatics.ca/projects/gts"
repository = "https://github.com/Blackcat-Informatics/gmeow-gts"
keywords = ["rdf", "rdf-12", "events", "knowledge-graph"]

[lib]
name = "gmeow_rdf_events"
path = "src/lib.rs"

[dependencies]
